--- a/src/_shared/scss/_adverts.scss
+++ b/src/_shared/scss/_adverts.scss
@@ -46,6 +46,8 @@
 
     @include mq(mobileLandscape, leftCol) {
         > .adverts__header {
+            justify-content: space-between;
+            align-items: center;
             flex-direction: row;
         }
 
